[package]
name = "ryot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
#big-brain = { version = "0.18.0"}
#big-brain = { git = "https://github.com/zkat/big-brain.git", branch = "main" }
#moonshine-behavior = "0.1.1"
#pathfinding = "4.4.0"
config = "0.13.4"
rand = "0.8.5"
serde = "1.0.193"
serde_repr = "0.1.17"
serde_json = "1.0.108"
rayon = "1.8.0"
log = "0.4.20"
time-test = "0.2.3"
heed = { version = "0.20.0-alpha.9", features = ["serde-rmp"], optional = true }
zstd = {  version = "0.13.0", optional = true }
postcard = { version = "1.0.8", features = ["alloc"], optional = true }
bytes = "1.5.0"
lzma-rs = "0.3.0"
image = "0.24.7"

# Protobuf
prost = "0.12.3"
prost-types = "0.12.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["compression"]
lmdb = ["dep:heed", "dep:postcard"]
compression = ["dep:zstd"]