[package]
name = "ryot"
version = "0.1.2"
edition = "2021"
authors = ["Lucas Grossi <lucas.ggrosis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "MMORPG library based on the concepts of open tibia written in rust and bevy."
repository = "https://github.com/opentibiabr/Ryot/tree/main/ryot"
homepage = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "assets", "ryot", "otbr", "bevy"]
categories = ["game-development"]
readme = "../README.md"

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
#big-brain = { version = "0.18.0"}
#big-brain = { git = "https://github.com/zkat/big-brain.git", branch = "main" }
#moonshine-behavior = "0.1.1"
#pathfinding = "4.4.0"
config = "0.13.4"
rand = "0.8.5"
serde = "1.0.193"
serde_repr = "0.1.17"
serde_json = "1.0.108"
rayon = "1.8.0"
log = "0.4.20"
time-test = "0.2.3"
heed = { version = "0.20.0-alpha.9", features = ["serde-rmp"], optional = true }
zstd = { version = "0.13.0", optional = true }
postcard = { version = "1.0.8", features = ["alloc"], optional = true }
bytes = "1.5.0"
lzma-rs = "0.3.0"
image = "0.24.7"
glam = { version = "0.24.2", features = ["serde"] }
thiserror = "1.0.56"
color-eyre = "0.6.2"

prost = "0.12.3"
prost-types = "0.12.3"

bevy_common_assets = { version = "0.9.0", features = ["toml", "json"], optional = true }
bevy_asset_loader = { version = "0.19.1", features = ["2d"], optional = true }
[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi-threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
]
optional = true

[dev-dependencies]
rstest = "0.18.2"

[features]
default = ["compression", "bevy"]
lmdb = ["dep:heed", "dep:postcard"]
compression = ["dep:zstd"]
bevy = ["dep:bevy", "dep:bevy_common_assets", "dep:bevy_asset_loader"]

[lints.clippy]
enum_glob_use = "deny"