[package]
name = "ryot"
version = "0.1.5"
edition = "2021"
authors = ["Lucas Grossi <lucas.ggrosis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "MMORPG library based on the concepts of open tibia written in rust and bevy."
repository = "https://github.com/opentibiabr/Ryot/tree/main/ryot"
homepage = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "assets", "ryot", "otbr", "bevy"]
categories = ["game-development"]
readme = "../README.md"

[dependencies]
async-std = "1.12.0"
derive_more = "0.99.17"
serde_repr = "0.1"

bevy = { workspace = true, optional = true }
bevy_asset_loader = { workspace = true, optional = true }
bevy_common_assets = { workspace = true, optional = true }
bevy_stroked_text = { workspace = true, optional = true }
bytes.workspace = true
color-eyre.workspace = true
egui = { workspace = true, optional = true }
glam.workspace = true
heed = { workspace = true, optional = true }
image.workspace = true
itertools.workspace = true
leafwing-input-manager = { workspace = true, optional = true }
log.workspace = true
lzma-rs.workspace = true
postcard = { workspace = true, optional = true }
prost-types.workspace = true
prost.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time-test.workspace = true
wasm-bindgen-futures.workspace = true
zstd = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
quickcheck = "1"
quickcheck_macros = "1"

[build-dependencies]
prost-build = "0.12"

[features]
default = ["bevy"]
debug = ["dep:bevy_stroked_text"]
lmdb = ["dep:heed", "dep:postcard"]
compression = ["dep:zstd"]
bevy = [
    "dep:bevy",
    "dep:bevy_common_assets",
    "dep:bevy_asset_loader",
    "dep:bevy_stroked_text",
    "dep:leafwing-input-manager",
]
egui = ["dep:egui"]

[lints.clippy]
enum_glob_use = "deny"
