[package]
name = "ryot_compass"
version = "0.1.0"
edition = "2021"

[dependencies]
ryot = { version = "0.1.0", path = "../ryot" }
bevy_egui = "0.24.0"
#bevy_ecs_tilemap = "0.11.1"
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap.git", branch = "0.12-fixes" }
egui = { version = "0.24.1", default-features = false, features = ["bytemuck"] }
rand = "0.8.5"
serde = "1.0.193"
serde_json = "1.0.108"
async-std = "1.12.0"
rayon = "1.8.0"
log = "0.4.20"
time-test = "0.2.3"
heed = { version = "0.20.0-alpha.9", features = ["serde-rmp"] }
zstd = "0.13.0"
postcard = { version = "1.0.8", features = ["alloc"] }
bytes = "1.5.0"
prost = "0.12.3"
lzma-rs = "0.3.0"
image = "0.24.7"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi-threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
]

[dependencies.bevy-inspector-egui]
version = "0.22.0"
default-features = true
#optional = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3