[package]
name = "ryot_compass"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
ryot = { version = "0.2.0", path = "../ryot", features = ["egui"] }

async-std = "1.12"
egui_dock = "0.11"
futures = "0.3"
rfd = "0.12"
uuid = "1.6"
wasm-bindgen-futures = "0.4"
winit = "0.29"

bevy.workspace = true
bevy_asset_loader.workspace = true
bevy_common_assets.workspace = true
bevy_egui.workspace = true
bytes.workspace = true
color-eyre.workspace = true
egui.workspace = true
egui_extras.workspace = true
glam.workspace = true
heed = { workspace = true, optional = true }
image.workspace = true
itertools.workspace = true
leafwing-input-manager = { workspace = true, features = ["egui"] }
log.workspace = true
lzma-rs.workspace = true
postcard.workspace = true
prost-types.workspace = true
prost.workspace = true
rand.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time-test.workspace = true

[dependencies.bevy-inspector-egui]
version = "0.23"
default-features = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
embed-resource = "2.4"
ryot = { version = "0.2.0", path = "../ryot" }

[features]
default = []
lmdb = ["dep:heed", "ryot/lmdb", "ryot/compression"]
diagnostics = []

[lints.clippy]
enum_glob_use = "deny"
