[package]
name = "ryot_assets_cli"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "CLI for managing assets from the Tibia client for Ryot."
repository = "https://github.com/opentibiabr/Ryot/tree/main/ryot"
homepage = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "assets", "ryot", "otbr", "bevy"]
categories = ["game-development"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ryot = { version = "0.2.0", path = "../../crates/ryot", default-features = false, features = [
    "compression",
] }
config = "0.13"
log = "0.4"
simple_logger = "4.3"
clap = { version = "4.5", features = ["derive"] }
lzma-rs = "0.3"
color-eyre.workspace = true
glam.workspace = true
image.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
