[package]
name = "ryot_assets_cli"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "AGPL-3.0-only"
description = "A command-line interface for managing game assets within the Ryot framework, facilitating efficient asset conversions of Tibia assets."
repository = "https://github.com/ry-ot/Ryot/tree/main/ryot"
homepage = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["cli", "asset-management", "game-development", "command-line-tool", "ryot"]
categories = ["game-development"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ryot = { workspace = true, default-features = false, features = ["compression"] }
config = "0.13"
log = "0.4"
simple_logger = "4.3"
clap = { version = "4.5", features = ["derive"] }
lzma-rs = "0.3"
color-eyre.workspace = true
glam.workspace = true
image.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
