[package]
name = "ryot"
version = "0.2.2"
edition = "2021"
authors = ["Lucas Grossi <lucas.ggrosis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "MMORPG library based on the concepts of open tibia written in rust and bevy."
repository = "https://github.com/opentibiabr/Ryot/tree/main/ryot"
homepage = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "assets", "ryot", "otbr", "bevy"]
categories = ["game-development"]
readme = "../../README.md"

[dependencies]
ryot_internal = { path = "../ryot_internal", version = "0.2" }

[features]
default = [
    "bevy",
    "tibia",
]

bevy = ["ryot_internal/bevy"]

tibia = ["ryot_internal/ryot_tibia"]

debug = ["ryot_internal/debug"]
lmdb = ["ryot_internal/lmdb"]
compression = ["ryot_internal/compression"]
egui = ["ryot_internal/egui"]

pathfinder = ["ryot_internal/ryot_pathfinder"]
tiled_pathfinder = ["ryot_internal/ryot_pathfinder"]

ray_casting = ["ryot_internal/ryot_ray_casting"]

[lints.clippy]
enum_glob_use = "deny"
