[package]
name = "ryot"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "AGPL-3.0-only"
description = "Central hub for the Ryot framework, offering a unified API along with essential plugins and bundles to facilitate game development using Bevy."
repository = "https://github.com/ry-ot/Ryot/tree/main/ryot"
homepage = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["game-development", "bevy-plugins", "game-framework", "tiled-2-games", "ryot"]
categories = ["game-development"]
readme = "../../README.md"

[dependencies]
bevy_stroked_text.workspace = true
bevy_app.workspace = true
bevy_asset_loader.workspace = true
bevy_common_assets.workspace = true
bevy_ecs.workspace = true
bevy_render.workspace = true
bevy_sprite.workspace = true

ryot_internal = { path = "../ryot_internal", version = "0.2" }

[features]
default = [
    "bevy",
    "tibia",
]

bevy = ["ryot_internal/bevy"]

tibia = ["ryot_internal/ryot_tibia"]

debug = ["ryot_internal/debug"]
lmdb = ["ryot_internal/lmdb"]
compression = ["ryot_internal/compression"]
egui = ["ryot_internal/egui"]

pathfinding = ["bevy", "ryot_internal/pathfinding"]

ray_casting = ["ryot_internal/ryot_ray_casting"]

[lints.clippy]
enum_glob_use = "deny"
