[package]
name = "ryot_core"
version = "0.2.0"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "A game engine core for Ryot, a MMORPG game, with generic features and systems."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "ryot", "core", "bevy"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_app",
    "dep:bevy_ecs",
    "dep:bevy_time",
    "dep:bevy_utils",
    "dep:leafwing-input-manager",
]

compression = ["dep:zstd"]

[dependencies.bevy_app]
version = "0.13"
optional = true

[dependencies.bevy_ecs]
version = "0.13"
features = ["bevy_reflect"]
optional = true

[dependencies.bevy_time]
version = "0.13"
optional = true

[dependencies.bevy_utils]
version = "0.13"
optional = true

[dependencies]
async-std = "1.12.0"
derive_more.workspace = true
glam.workspace = true
leafwing-input-manager = { workspace = true, optional = true }
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wasm-bindgen-futures = "0.4.42"
zstd = { workspace = true, optional = true }

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true