[package]
name = "ryot_core"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "A game engine core for Ryot, a MMORPG game, with generic features and systems."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "ryot", "core", "bevy"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_app",
    "dep:bevy_ecs",
    "dep:bevy_time",
    "dep:bevy_utils",
    "dep:bevy_window",
    "dep:leafwing-input-manager",
]

compression = ["dep:zstd"]

[dependencies]
bevy_app = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true }
bevy_utils = { workspace = true, optional = true }
bevy_window = { workspace = true, optional = true }

async-std = "1.12.0"
derive_more.workspace = true
glam.workspace = true
leafwing-input-manager = { workspace = true, optional = true }
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wasm-bindgen-futures = "0.4.42"
zstd = { workspace = true, optional = true }

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true