[package]
name = "ryot_core"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "Core functionality crate for the Ryot framework, housing essential components and systems foundational to game development."
homepage = "https://github.com/ry-ot/Ryot"
repository = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["game-development", "core", "foundation", "base-components", "ryot"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_asset",
    "dep:bevy_ecs",
    "dep:bevy_math",
    "dep:bevy_reflect",
    "dep:bevy_render",
    "dep:bevy_sprite",
    "dep:bevy_utils",
    "dep:bevy_asset_loader",
]

[dependencies]
bevy_asset = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_math = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_render = { workspace = true, optional = true }
bevy_sprite = { workspace = true, optional = true }
bevy_utils = { workspace = true, optional = true }
bevy_asset_loader = { workspace = true, optional = true }

ryot_utils = { path = "../ryot_utils", version = "0.2" }

async-std = "1.12.0"
derive_more.workspace = true
glam.workspace = true
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true